# fencer-lunge-iq

./: .gitignore  README.md
backend/: check_users.py  database.py  deepmotion_api.py  main.py  models.py  pyproject.toml  requirements.txt  test_main.py
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json  service-worker.js
frontend/src/: App.tsx  index.tsx  serviceWorkerRegistration.ts
frontend/src/components/: AuthenticatedHome.tsx  Login.tsx  LogoutHandler.tsx  MobileNavbar.tsx  Navbar.tsx  ProtectedRoute.tsx  VideoCapture.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Dashboard.tsx  Home.tsx  Results.tsx  Upload.tsx
frontend/src/types/: auth.ts
